@@ -1,3 +1,9 @@
+2007-04-04  Jens Granseuer  <jensgr@gmx.net>
+
+	* gnome-theme-details.c: (update_color_buttons_from_string):
+	don't crash if the color string is mangled, and close a small
+	memory leak
+
 2007-03-21  Frederic Crozat  <fcrozat@mandriva.com>
 
 	* gnome-theme-details.c: (update_color_scheme_tab):
